<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="install_button">Install Fulldive</string>
    <string name="proceed_button">Not now</string>
    <string name="dont_ask_checkbox">Don\'t ask next time</string>
    <string name="dummy_content">Download the full version of FullDive for free.</string>

    <string name="startup_title">SET UP</string>
    <string name="startup_hint1">Tilt your phone horizontal.</string>
    <string name="startup_hint2">Place it centered inside your headset.</string>
    <string name="startup_skip">Skip</string>

    <string name="message_permission_request">You need to grant access to: </string>

    <string name="permissions_title">Permissions</string>
    <string name="permissions_positive">Request</string>
    <string name="permissions_negative">Close</string>
    <string name="permission_nfc">NFC</string>
    <string name="permission_vibrate">vibrate</string>
    <string name="permission_internet">internet</string>
    <string name="permission_network_state">network state</string>
    <string name="permission_storage">storage</string>
    <string name="permission_record_audio">record audio</string>
    <string name="permission_camera">camera</string>
    <string name="permission_wake_lock">wake lock</string>

    <string name="title_fulldive">FULLDIVE</string>
    <string name="subtitle_fulldive">Imagine Better</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="signin_hint">Logging in helps you mark all your favorites videos and allows you to fallow friends and leave comments</string>
    <string name="signin_browser_title">Sign In</string>
</resources>
