<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:keepScreenOn="true"
        android:paddingLeft="7sp"
        android:paddingRight="7sp"
        android:paddingTop="80sp"
        android:text="@string/dummy_content"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/install_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/install_button" />

        <Button
            android:id="@+id/proceed_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/proceed_button" />

        <CheckBox
            android:id="@+id/dont_ask_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dont_ask_checkbox"
            android:textColor="#ffffffff" />
    </LinearLayout>

</FrameLayout>
