<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/startup_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/startup_overlay" />


    <Button
        android:id="@+id/startup_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:text="@string/startup_skip"
        android:textColor="@color/startup_hint"
        android:textSize="@dimen/startup_skip" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/webviewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/startup_skip"
        android:layout_alignParentTop="true"
        android:visibility="visible">


        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/startupLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/startup_skip"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/startup_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startup_title"
                android:textColor="@color/startup_title"
                android:textSize="@dimen/startup_title"
                android:textStyle="bold" />

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/splash_image1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/startup_hint_top_margin"
                android:gravity="center"
                android:text="@string/startup_hint1"
                android:textColor="@color/startup_hint"
                android:textSize="@dimen/startup_hint" />

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/transparent" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/splash_image2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/startup_hint_top_margin"
                android:gravity="center"
                android:text="@string/startup_hint2"
                android:textColor="@color/startup_hint"
                android:textSize="@dimen/startup_hint" />

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>